リンク修正

--- a/style.css
+++ b/style.css
@@ -128,11 +128,11 @@ main .body-wrap {
 }
 
 .link.github {
-  background-image: url(/img/icon-github.png);
+  background-image: url(/front-portfolio/img/icon-github.png);
 }
 
 .link.mail {
-  background-image: url(/img/icon-mail.png);
+  background-image: url(/front-portfolio/img/icon-mail.png);
 }
 
 /* タブレット以上 */
